# monopoly

./: Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/examples/: cli.rs  web.rs
backend/src/: card.rs  game.rs  square.rs
examples/: play.rs
src/: card.rs  dialog.rs  game.rs  lib.rs  main.rs  player.rs  publisher.rs  square.rs  upload.sh
web-app/: package.json
web-app/public/: index.html
web-app/src/: App.css  App.tsx  RollDice.tsx
web-app/src/types/: types.tsx
