[package]
name = "monopoly"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand          = "0.7.3"
async-process = "1.2.0"
log		      = "0.4.14"
env_logger    = "0.9.0"
actix-cors    = "0.5.4"
actix-web     = "3"
serde         = "1"
serde_json    = "1"
