[package]
name = "monopoly"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand          = "0.7.3"
async-process = "1.2.0"
log		      = "0.4.14"
env_logger    = "0.9.0"
rocket        = "0.4.10"
rocket_cors   = "0.5.1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
